src/stylesheet.css
/* ... */
.just-perfection-api-panel-indicator-padding-size27 .panel-status-indicators-box { spacing: 27px; }
.just-perfection-api-panel-indicator-padding-size28 .panel-status-indicators-box { spacing: 28px; }
.just-perfection-api-panel-indicator-padding-size29 .panel-status-indicators-box { spacing: 29px; }
.just-perfection-api-panel-indicator-padding-size30 .panel-status-indicators-box { spacing: 30px; }
.just-perfection-api-panel-indicator-padding-size31 .panel-status-indicators-box { spacing: 31px; }
.just-perfection-api-panel-indicator-padding-size32 .panel-status-indicators-box { spacing: 32px; }
.just-perfection-api-panel-indicator-padding-size33 .panel-status-indicators-box { spacing: 33px; }
.just-perfection-api-panel-indicator-padding-size34 .panel-status-indicators-box { spacing: 34px; }
.just-perfection-api-panel-indicator-padding-size35 .panel-status-indicators-box { spacing: 35px; }
.just-perfection-api-panel-indicator-padding-size36 .panel-status-indicators-box { spacing: 36px; }
.just-perfection-api-panel-indicator-padding-size37 .panel-status-indicators-box { spacing: 37px; }
.just-perfection-api-panel-indicator-padding-size38 .panel-status-indicators-box { spacing: 38px; }
.just-perfection-api-panel-indicator-padding-size39 .panel-status-indicators-box { spacing: 39px; }
.just-perfection-api-panel-indicator-padding-size40 .panel-status-indicators-box { spacing: 40px; }
.just-perfection-api-panel-indicator-padding-size41 .panel-status-indicators-box { spacing: 41px; }
.just-perfection-api-panel-indicator-padding-size42 .panel-status-indicators-box { spacing: 42px; }
.just-perfection-api-panel-indicator-padding-size43 .panel-status-indicators-box { spacing: 43px; }
.just-perfection-api-panel-indicator-padding-size44 .panel-status-indicators-box { spacing: 44px; }
.just-perfection-api-panel-indicator-padding-size45 .panel-status-indicators-box { spacing: 45px; }
.just-perfection-api-panel-indicator-padding-size46 .panel-status-indicators-box { spacing: 46px; }
.just-perfection-api-panel-indicator-padding-size47 .panel-status-indicators-box { spacing: 47px; }
.just-perfection-api-panel-indicator-padding-size48 .panel-status-indicators-box { spacing: 48px; }
.just-perfection-api-panel-indicator-padding-size49 .panel-status-indicators-box { spacing: 49px; }
.just-perfection-api-panel-indicator-padding-size50 .panel-status-indicators-box { spacing: 50px; }
.just-perfection-api-panel-indicator-padding-size51 .panel-status-indicators-box { spacing: 51px; }
.just-perfection-api-panel-indicator-padding-size52 .panel-status-indicators-box { spacing: 52px; }
.just-perfection-api-panel-indicator-padding-size53 .panel-status-indicators-box { spacing: 53px; }
.just-perfection-api-panel-indicator-padding-size54 .panel-status-indicators-box { spacing: 54px; }
.just-perfection-api-panel-indicator-padding-size55 .panel-status-indicators-box { spacing: 55px; }
.just-perfection-api-panel-indicator-padding-size56 .panel-status-indicators-box { spacing: 56px; }
.just-perfection-api-panel-indicator-padding-size57 .panel-status-indicators-box { spacing: 57px; }
.just-perfection-api-panel-indicator-padding-size58 .panel-status-indicators-box { spacing: 58px; }
.just-perfection-api-panel-indicator-padding-size59 .panel-status-indicators-box { spacing: 59px; }
.just-perfection-api-panel-indicator-padding-size60 .panel-status-indicators-box { spacing: 60px; }

.just-perfection-api-no-window-close .window-close,
.just-perfection-api-no-window-close.just-perfection .window-close
{
    height: 0;
    width: 0;
    background: transparent;
    border-radius: 0;
    border: 0;
    spacing: 0;
    box-shadow: none;
}

.just-perfection-api-no-ripple-box .ripple-box
{
    background-color: transparent;
}

/**
 * This can refresh other styles that is not inculding any standard css styles.
 * values are not important here. Just do something that can change the look
 */
.just-perfection-api-refresh-styles .panel-button,
.just-perfection-api-refresh-styles .panel-status-indicators-box,
.just-perfection-api-refresh-styles .panel-button StIcon,
.just-perfection-api-refresh-styles .system-status-icon
{
    background-color: gold;
    color: gold;
    border-radius: 100px;
}

.just-perfection-api-no-weather .weather-button,
.just-perfection-api-no-weather .weather-button *,
.just-perfection-api-no-world-clocks .world-clocks-button,
.just-perfection-api-no-world-clocks .world-clocks-button *,
.just-perfection-api-no-events-button .events-button,
.just-perfection-api-no-events-button .events-button *,
.just-perfection-api-no-screen-sharing-indicator .screen-sharing-indicator,
.just-perfection-api-no-screen-sharing-indicator .screen-sharing-indicator *,
.just-perfection-api-no-screen-recording-indicator .screen-recording-indicator,
.just-perfection-api-no-screen-recording-indicator .screen-recording-indicator *
{
    padding: 0;
    margin: 0;
    border: 0;
    height: 0;
    width: 0;
}

.just-perfection-api-panel-icon-size1 .system-status-icon, .just-perfection-api-panel-icon-size1 .panel-button StIcon { icon-size: 1px; }
.just-perfection-api-panel-icon-size2 .system-status-icon, .just-perfection-api-panel-icon-size2 .panel-button StIcon { icon-size: 2px; }
.just-perfection-api-panel-icon-size3 .system-status-icon, .just-perfection-api-panel-icon-size3 .panel-button StIcon { icon-size: 3px; }
.just-perfection-api-panel-icon-size4 .system-status-icon, .just-perfection-api-panel-icon-size4 .panel-button StIcon { icon-size: 4px; }
.just-perfection-api-panel-icon-size5 .system-status-icon, .just-perfection-api-panel-icon-size5 .panel-button StIcon { icon-size: 5px; }
.just-perfection-api-panel-icon-size6 .system-status-icon, .just-perfection-api-panel-icon-size6 .panel-button StIcon { icon-size: 6px; }
.just-perfection-api-panel-icon-size7 .system-status-icon, .just-perfection-api-panel-icon-size7 .panel-button StIcon { icon-size: 7px; }
/* ... */

